Adding images and styles for homepage

--- a/src/css/myCo.css
+++ b/src/css/myCo.css
@@ -1,6 +1,6 @@
 .carDiv{
     height: 420px;
-    border: 1px solid red;
+    border: 1px solid black;
     width: 60%;
     margin-left: 20%;
     padding: 3px;
